kubernetes/monitor/monitor-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-demo
  labels:
    app: monitor-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-demo
  template:
    metadata:
      name: monitor-demo
      labels:
        app: monitor-demo
    spec:
      containers:
        - name: server-demo
          image: registry.cn-hangzhou.aliyuncs.com/gpg_dev/nginx1:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: server
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
      restartPolicy: Always
