kubernetes/monitor/monitor-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-demo-svc
  namespace: demo
  labels:
    app: monitor-demo
    release: kube-prometheus-stack
    self-monitor: "true"
spec:
  selector:
    app: monitor-demo
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 80
#  #使用svc直接访问
#  externalIPs:
#    - 192.168.49.2
  type: ClusterIP
