kubernetes/monitor/nginx-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-ingress
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/rewrites: "serviceName=nginx-ingress-controller rewrite=/"
  namespace: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: lb.gpg123.vip
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-controller
                port:
                  number: 9113
